--- a/paper/content.tex
+++ b/paper/content.tex
@@ -1649,9 +1649,8 @@ lower bound on the objective of the optimal rule list in~$\StartsWith(\PrefixB)$
 
 \begin{proof}
 Since the prefixes~$\Prefix$ and~$\PrefixB$ contain
-the same antecedents, they both capture the same data.
-%
-The remainder of the proof follows from Theorem~\ref{thm:equivalent}.
+the same antecedents, they both capture the same data,
+and thus we can apply Theorem~\ref{thm:equivalent}.
 \end{proof}
 
 Thus if prefixes~$\Prefix$ and~$\PrefixB$ have the same antecedents,
