--- a/paper/permutation.tex
+++ b/paper/permutation.tex
@@ -89,8 +89,9 @@ yielding the same default rule misclassification error:
 \begin{align}
 \Loss_0(\Prefix, \Default, \x, \y) = \Loss_0(\PrefixB, \DefaultB, \x, \y).
 \end{align}
-Similarly, the rule lists~$\RL'$ and~$\RLB'$ have the same
-default rule misclassification error:
+Similarly, prefixes~$\Prefix'$ and~$\PrefixB'$ capture
+the same data, and thus rule lists~$\RL'$ and~$\RLB'$
+have the same default rule misclassification error:
 \begin{align}
 \Loss_0(\Prefix, \Default, \x, \y) = \Loss_0(\PrefixB, \DefaultB, \x, \y).
 \end{align}
