--- a/paper/content.tex
+++ b/paper/content.tex
@@ -1131,7 +1131,7 @@ Combine Propositions~\ref{prop:min-capture},
 Define~$\StartContains(\Prefix)$ as in~\eqref{eq:start-contains},
 and let ${\Prefix = (p_1, \dots, p_{K-1}, p_{K})}$ be a prefix,
 such that its last antecedent~$p_{K}$ has insufficient support,
-\ie the opposite of the bound in~\eqref{eq:min-capture},
+\ie the opposite of the bound in~\eqref{eq:min-capture}:
 ${\Supp(p_K, \x \given \Prefix) \le \Reg}$.
 %
 Let ${\Prefix^{K-1} = (p_1, \dots, p_{K-1})}$,
